--- a/Street Art Map/Base.lproj/Main.storyboard
+++ b/Street Art Map/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="RrQ-vg-uDG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="RrQ-vg-uDG">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -337,6 +337,7 @@
                     <navigationItem key="navigationItem" title="Map" id="2l1-Su-JPE"/>
                     <connections>
                         <outlet property="mapView" destination="O58-Xz-NYF" id="OjD-jx-eHS"/>
+                        <segue destination="wD5-RQ-0zd" kind="presentation" identifier="View Photo" id="1wL-PX-QkG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jTC-vk-bgf" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -607,6 +608,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="3dA-IQ-B8v"/>
+        <segue reference="1wL-PX-QkG"/>
     </inferredMetricsTieBreakers>
 </document>
